// Copyright 2017 Istio Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

// Stackdriver Context API Adapter
package adapter.contextgraph.config;

import "gogoproto/gogo.proto";

option go_package="config";
option (gogoproto.goproto_getters_all) = false;
option (gogoproto.equal_all) = false;
option (gogoproto.gostring_all) = false;

// Config for Stackdriver Context API adapter.
message Params {
  // Endpoint URL to send stackdriver data - leave empty to use the
  // StackDriver SDK's default value (contextgraph.googleapis.com).
  string endpoint = 1;

  // GCP Project ID
  string project_id = 2;

  // GCP Cluster Zone
  string zone = 3;

  // GCP Cluster Name
  string cluster = 4;

  // Credentials must be attached to every call made to StackDriver. This
  // can be an API key, a service account secret key, or ADC.
  oneof creds {
    // Use Google's Application Default Credentials to authorize calls made
    // by the StackDriver SDK.
    //
    // [See Google's documentation](https://developers.google.com/identity/protocols/application-default-credentials).
    bool app_credentials = 5;

    // The API Key to be used for auth.
    string api_key = 6;

    // The path to a Google service account credential file, relative to
    // the Mixer. E.g. `/etc/opt/mixer/gcp-serviceaccount-creds.json`
    // or `./testdata/my-test-account-creds.json`.
    string service_account_path = 7;
  }
}
